--- a/dondominio/dondomcli.conf
+++ b/dondominio/dondomcli.conf
@@ -19,15 +19,16 @@ DDUSER=""
 
 DDPASSWORD=""
 
+# IP que va a aplicar DonDNS al host
 # Si no se indica una IP concreta, se aplicará la IP pública 
 # desde donde se lanza la ejecución de este script. En el caso
 # que desees aplicar una IP fija, descomenta la siguiente linea
-# e indica la IP
+# e indica la IP deseada
 
 #DDIP=""
 
-# El campo de la Zona DNS que se pretende actualizar. Puede 
-# ponerse un host por defecto o pasarlo por linea de comandos.
+# El campo de la Zona DNS que se pretende actualizar. 
+# Puede ponerse un host por defecto o pasarlo por linea de comandos.
 # También se pueden utilizarse varios hosts, separados por ","
 
 DDHOST=""
